// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'acala' to 'interlay' using bridgeSDK cross-chain 'INTR' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 8,
  "toChain": "(rounded 100000)",
}
`;

exports[`'acala' to 'interlay' using bridgeSDK cross-chain 'INTR' > fee 1`] = `"(rounded 0.002)"`;

exports[`'acala' to 'interlay' using bridgeSDK cross-chain 'INTR' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 10,
  "toChain": 100000,
}
`;
